// Copyright 2019 Cargill Incorporated
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message ScabbardMessage {
    enum Type {
        UNSET = 0;
        CONSENSUS_MESSAGE = 1;
        PROPOSED_BATCH = 2;
    }

    Type message_type = 1;

    // Set if type is CONSENSUS_MESSAGE
    bytes consensus_message = 2;

    // Set if type is PROPOSED_BATCH
    ProposedBatch proposed_batch = 3;
}

message ProposedBatch {
    bytes proposal = 1;
    bytes batch = 2;
    string service_id = 3;
}

// The Setting protobuf (copied from Sawtooth) is required for setting the admin
// keys when Sabre starts
//
// Setting Container for on-chain configuration key/value pairs
message Setting {
    // Contains a setting entry (or entries, in the case of collisions).
    message Entry {
        string key = 1;
        string value = 2;
    }

    // List of setting entries - more than one implies a state key collision
    repeated Entry entries = 1;
}
